--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   },
   "homepage": "https://github.com/Andrey1079/movies-explorer-api#readme",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
+    "escape-html": "^1.0.3",
     "express": "^4.18.2",
     "mongoose": "^7.5.1",
     "validator": "^13.11.0"
