--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,26 @@
+# Logs
+logs
+*.log
+npm-debug.log*
+
+# dependencies
 node_modules
-.log
+/.pnp
+.pnp.js
+
+# Optional npm cache directory
+.npm
+
+# Optional REPL history
+.DS_Store
+.idea
+.vscode
+
+#env
+.env
+
+
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
