--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "celebrate": "^15.0.1",
+    "cors": "^2.8.5",
     "escape-html": "^1.0.3",
     "express": "^4.18.2",
     "express-rate-limit": "^7.0.0",
